# whale_fall

./: Cargo.toml  README.md  whale.toml
src/: app.rs  main.rs
src/asts/: go.rs
src/common/: file.rs  go.rs  mod.rs  str.rs  tests.rs
src/core/: doc.rs  meta.rs  mod.rs  tests.rs  traits.rs
src/docs/: go.rs
src/generators/: miman_generator.rs  mod.rs  sgz_generator.rs  tests.rs
src/outputers/: go_outputer.rs  md_outputer.rs  mod.rs
src/parsers/: gm_parser.rs  mod.rs
src/processers/: miman_processer.rs  mod.rs
src/tpls/: engine.rs  mod.rs  tests.rs
src/tpls/miman/: dao_def.rs  do_def.rs  docs.rs  gi_def.rs  handler.rs  header.rs  http_routes.rs  http_types.rs  micro_entry.rs  micro_provider.rs  micro_service.rs  micro_types.rs  mod.rs  repo_def.rs  tests.rs  type_def.rs  types.rs
src/tpls/sgz/: dao_def.rs  do_def.rs  logic_def.rs  mod.rs  svc_def.rs
