[package]
name = "whale_fall"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "a code generator based on data flow style"
repository = "https://github.com/jqiris/whale_fall.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive"] }
gosyn = "0.2.8"
handlebars = "5.1.0"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tempfile = "3.9.0"
toml = "0.8.8"
